Figure out overflow issue with cards

--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+/* https://stackoverflow.com/questions/43311943/prevent-content-from-expanding-grid-items */
+
+
 body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+H5 {
+    margin: none;
 }
 
 a {
@@ -65,14 +72,17 @@ ul {
 
 #cards > .card {
     border-left: 5px solid orange;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: no;
 }
 
 .card {
     /* border: 1px solid black; */
     border-radius: 10px;
-    padding: 5px;
     background-color: white;
     box-shadow: 3px 2px 6px rgba(39, 39, 39, 0.15);
+    padding: 10px;
 }
 
 #trending,
